Stuck.  Cannot get footer to stop being overwritten.

--- a/styles/first-stylesheet.css
+++ b/styles/first-stylesheet.css
@@ -1,6 +1,26 @@
 /*Week 3 assignment use CSS styles  don't worry about esthetics */
 
 
+/*Update week 5 use positioning */
+
+#container {
+  width: 900px;
+  margin: 0 auto;
+}
+#content {
+  position: relative;
+  padding: 20px 250px 150px 20px;
+  background: #fff;
+}
+footer {
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  width: 100%;
+  margin-top: -150px;
+}
+
 /*Here is a style by element type; note use of pseudo-class. It defines a style based on a state of an element*/
 
 p:hover {
